change command list from map to multiline text

--- a/build.gradle
+++ b/build.gradle
@@ -16,6 +16,8 @@ repositories {
   }
 }
 
+version = "0.3.0"
+
 if (!project.hasProperty('release.scope')) {
   project.ext['release.scope'] = 'patch'
 }
